Fixed the whole text alignment thing, I think. Still need to add more stuff and make the boxes less ugly.

--- a/style.css
+++ b/style.css
@@ -13,19 +13,28 @@ img {
 	margin: 0 40% 20px 40%;
 }
 
-p {
+#main-left {
+	text-align: center;
+	font-family: Ariel;
+	background: silver; 
+	float: left;
+	padding-left: 8px;
+	margin-right: 20px;
+	margin-left: 15%;
+	width: 30%;	
 	text-align: center;
 	font-family: Ariel;
 }
 
-#main-left {
-	background: silver; 
-	float: left;
-}
-
 #main-right {
+	text-align: center;
+	font-family: Ariel;
 	background: silver;
-	float: left;
+	float: right;
+	padding-right: 8px;
+	margin-right: 15%;
+	margin-left: 20px;
+	width: 30%;
 }
 
 .clearfix:after {
